# network-manager-iodine

./: Makefile.am  autogen.sh  configure.ac
po/: POTFILES.in  POTFILES.skip
properties/: Makefile.am  gresources.xml  nm-iodine-dialog-gtk3.ui  nm-iodine-dialog-gtk4.ui  nm-iodine.c
src/: nm-iodine-service.c
